[gd_scene load_steps=12 format=3 uid="uid://d12lflx4x6ehn"]

[ext_resource type="Material" uid="uid://bxadek7ymxxlr" path="res://shaders/Materials/blur-post-process_mat.tres" id="1_2vdtb"]
[ext_resource type="Shader" uid="uid://c0bhglnpoeguq" path="res://shaders/pp_band-dither.gdshader" id="2_bf40q"]
[ext_resource type="Script" uid="uid://be1ck073dtq1p" path="res://shaders/scene_loader.gd" id="2_dt8i1"]
[ext_resource type="Texture2D" uid="uid://b0ub3tqjyw46f" path="res://shaders/psxdither.png" id="3_747aq"]
[ext_resource type="PackedScene" uid="uid://bwwch08u1fki0" path="res://Level/level.tscn" id="3_mhg1c"]
[ext_resource type="Script" uid="uid://sx8m74ix003n" path="res://shaders/soundtrack_player.gd" id="6_747aq"]
[ext_resource type="AudioStream" uid="uid://e1dhxxoqpfrt" path="res://Songs/How Much Do You Think I Can Get For This Copy Of Over The Hedge For The GameCube.mp3" id="7_pugex"]
[ext_resource type="AudioStream" uid="uid://bebrr77dfsj6g" path="res://Songs/I Wanna Do A Kickflip (Yeah Yeah).mp3" id="8_rjnl7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tfw45"]
shader = ExtResource("2_bf40q")
shader_parameter/dither_tex = ExtResource("3_747aq")
shader_parameter/col_depth = 15.0
shader_parameter/dither_banding = true

[sub_resource type="FontFile" id="FontFile_pugex"]
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_rjnl7"]
font = SubResource("FontFile_pugex")
font_size = 10

[node name="PostProcessing" type="Node"]

[node name="RetroLayer" type="CanvasLayer" parent="."]

[node name="Blur" type="SubViewportContainer" parent="RetroLayer"]
material = ExtResource("1_2vdtb")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="RetroLayer/Blur"]
handle_input_locally = false
size = Vector2i(960, 720)
render_target_update_mode = 4

[node name="DitherBanding" type="SubViewportContainer" parent="RetroLayer/Blur/SubViewport"]
material = SubResource("ShaderMaterial_tfw45")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
stretch_shrink = 3

[node name="SubViewport" type="SubViewport" parent="RetroLayer/Blur/SubViewport/DitherBanding"]
handle_input_locally = false
size = Vector2i(320, 240)
render_target_update_mode = 4

[node name="SceneLoader" type="Node" parent="RetroLayer/Blur/SubViewport/DitherBanding/SubViewport"]
script = ExtResource("2_dt8i1")
level = ExtResource("3_mhg1c")

[node name="SongLabel" type="Label" parent="RetroLayer/Blur/SubViewport/DitherBanding/SubViewport"]
unique_name_in_owner = true
offset_left = 15.0
offset_top = 200.0
offset_right = 56.0
offset_bottom = 223.0
label_settings = SubResource("LabelSettings_rjnl7")
vertical_alignment = 1

[node name="SoundtrackPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("6_747aq")
songs = Array[AudioStream]([ExtResource("7_pugex"), ExtResource("8_rjnl7")])

[connection signal="finished" from="SoundtrackPlayer" to="SoundtrackPlayer" method="_on_finished"]
